Changes for new Collection creation on transformation Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>